# rp2040-midi-player

./: README.md
case/dac-version/: midi player dac box matte gray pla.3mf  midi player dac lid matte gray pla.3mf  standoff M2 x 5 x 7.8 mm.3mf  standoff M2 x 5 x 8 mm.3mf
case/led-light-guide/: lightguides 2.2mm.3mf
case/midi-fighter-stand/: Midi Fighter Stand.3mf
case/noise-box-2000/: README.md  noise-box-2000-body.3mf  noise-box-2000-led.3mf
case/spkr-version/: led cover for base mount.3mf  midi player speaker body, gray basic.3mf  midi player speaker lid, yellow and red.3mf
examples/i2c_expander_example/: CMakeLists.txt  main.c
pcb/dac-version/: soundboard-qtpy-usd-dac-smaller-v02.brd  soundboard-qtpy-usd-dac-smaller-v02.sch
pcb/qwiic-led-board/: leds-2.brd  leds-2.sch
pcb/spkr-version/: soundboard-qtpy-bff-v01.brd  soundboard-qtpy-bff-v01.sch
src/: CMakeLists.txt  README.md  hw_config.c  main.c
